[gd_scene load_steps=21 format=3 uid="uid://dc0lm7uo7gys5"]

[ext_resource type="Shader" uid="uid://o6bv01tulvif" path="res://shaders/edge_fade.tres" id="1_7xlym"]
[ext_resource type="Texture2D" uid="uid://7il20480pi4t" path="res://third_party/kenny/spark_05.png" id="2_xq0dx"]
[ext_resource type="Texture2D" uid="uid://f5lbxcbqlsc2" path="res://third_party/kenny/spark_06.png" id="3_gj00s"]
[ext_resource type="Script" path="res://surface_sub_explosion.gd" id="3_u53ho"]
[ext_resource type="Texture2D" uid="uid://y0inffetgdld" path="res://third_party/kenny/spark_01.png" id="5_lhqyi"]
[ext_resource type="Texture2D" uid="uid://bclj1gx8g77hh" path="res://third_party/kenny/spark_02.png" id="6_k3ijp"]
[ext_resource type="Texture2D" uid="uid://dg2kk1bcenfu8" path="res://third_party/kenny/spark_03.png" id="7_s5p35"]
[ext_resource type="Texture2D" uid="uid://rygud88n5pu6" path="res://third_party/kenny/spark_04.png" id="8_20r8s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ugtim"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_7xlym")
shader_parameter/surface_gradient = Vector3(0, 0, 0.2)
shader_parameter/surface_x_offset = 0.0
shader_parameter/surface_y_offset = 0.0
shader_parameter/hue = 0.5
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/x_fade_enable = false
shader_parameter/y_fade_enable = true
shader_parameter/Texture2DParameter = ExtResource("2_xq0dx")

[sub_resource type="PlaneMesh" id="PlaneMesh_kwuxf"]
material = SubResource("ShaderMaterial_ugtim")
size = Vector2(1, 1)
orientation = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v8qxi"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_7xlym")
shader_parameter/surface_gradient = Vector3(0, 0, 0.2)
shader_parameter/surface_x_offset = 0.0
shader_parameter/surface_y_offset = 0.0
shader_parameter/hue = 0.5
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/x_fade_enable = false
shader_parameter/y_fade_enable = true
shader_parameter/Texture2DParameter = ExtResource("3_gj00s")

[sub_resource type="PlaneMesh" id="PlaneMesh_ukdl4"]
material = SubResource("ShaderMaterial_v8qxi")
orientation = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5u7ww"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_7xlym")
shader_parameter/surface_gradient = Vector3(0, 0, 0.2)
shader_parameter/surface_x_offset = 0.0
shader_parameter/surface_y_offset = 0.0
shader_parameter/hue = 0.5
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/x_fade_enable = true
shader_parameter/y_fade_enable = true
shader_parameter/Texture2DParameter = ExtResource("5_lhqyi")

[sub_resource type="PlaneMesh" id="PlaneMesh_noh6v"]
material = SubResource("ShaderMaterial_5u7ww")
orientation = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_545xi"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_7xlym")
shader_parameter/surface_gradient = Vector3(0, 0, 0.2)
shader_parameter/surface_x_offset = 0.0
shader_parameter/surface_y_offset = 0.0
shader_parameter/hue = 0.5
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/x_fade_enable = true
shader_parameter/y_fade_enable = true
shader_parameter/Texture2DParameter = ExtResource("6_k3ijp")

[sub_resource type="PlaneMesh" id="PlaneMesh_y0fbx"]
material = SubResource("ShaderMaterial_545xi")
orientation = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b10m6"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_7xlym")
shader_parameter/surface_gradient = Vector3(0, 0, 0.2)
shader_parameter/surface_x_offset = 0.0
shader_parameter/surface_y_offset = 0.0
shader_parameter/hue = 0.5
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/x_fade_enable = true
shader_parameter/y_fade_enable = true
shader_parameter/Texture2DParameter = ExtResource("7_s5p35")

[sub_resource type="PlaneMesh" id="PlaneMesh_1j34j"]
material = SubResource("ShaderMaterial_b10m6")
orientation = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jxwe0"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_7xlym")
shader_parameter/surface_gradient = Vector3(0, 0, 0.2)
shader_parameter/surface_x_offset = 0.0
shader_parameter/surface_y_offset = 0.0
shader_parameter/hue = 0.5
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/x_fade_enable = true
shader_parameter/y_fade_enable = true
shader_parameter/Texture2DParameter = ExtResource("8_20r8s")

[sub_resource type="PlaneMesh" id="PlaneMesh_6pfus"]
material = SubResource("ShaderMaterial_jxwe0")
orientation = 2

[node name="HecateSurfaceSubExplosion" type="Node3D"]
script = ExtResource("3_u53ho")

[node name="BoltSingle" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_kwuxf")

[node name="BoltMulti" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_ukdl4")

[node name="Core0" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_noh6v")

[node name="Core1" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_y0fbx")

[node name="Core2" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_1j34j")

[node name="Core3" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("PlaneMesh_6pfus")
